Add fine tuning datasets

--- a/configs/finetune_full.yaml
+++ b/configs/finetune_full.yaml
@@ -3,8 +3,9 @@
 # Model and data
 stage: sft
 model_name_or_path: ckpts/gpt2_small_urank
-dataset: wikitext2
+dataset: alpaca_en
 output_dir: outputs/full
+template: default
 
 # Fine-tuning type - Full
 finetuning_type: full
