--- a/configs/finetune_freeze.yaml
+++ b/configs/finetune_freeze.yaml
@@ -4,8 +4,9 @@
 # Model and data
 stage: sft
 model_name_or_path: ckpts/gpt2_small_urank
-dataset: wikitext2
+dataset: alpaca_en
 output_dir: outputs/freeze
+template: default
 
 # Fine-tuning type - Freeze
 finetuning_type: freeze
