--- a/configs/finetune_lora.yaml
+++ b/configs/finetune_lora.yaml
@@ -3,8 +3,9 @@
 # Model and data
 stage: sft
 model_name_or_path: ckpts/gpt2_small_urank
-dataset: wikitext2
+dataset: alpaca_en
 output_dir: outputs/lora
+template: default
 
 # PEFT Configuration - LoRA
 finetuning_type: lora
